--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,12 +27,9 @@ services:
     labels:
     - 'traefik.enable=true'
     - 'traefik.http.routers.vault.rule=Host(`$HOSTNAME.$DOMAIN`)'
-    - 'traefik.http.routers.vault.entrypoints=web'
-    - 'traefik.http.routers.vault.middlewares=http-to-https@file'
+    - 'traefik.http.routers.vault.entrypoints=websecure'
+    - 'traefik.http.routers.vault.middlewares=$MIDDLEWARE'
     - 'traefik.http.routers.vault.service=vault'
-    - 'traefik.http.routers.vault-secure.rule=Host(`$HOSTNAME.$DOMAIN`)'
-    - 'traefik.http.routers.vault-secure.entrypoints=websecure'
-    - 'traefik.http.routers.vault-secure.service=vault'
     - 'traefik.http.services.vault.loadbalancer.passhostheader=true'
 
 volumes:
